--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1>K.Tejashwini</h1>
+        <h1>K.Tejas</h1>
         <p >today is the first class of coding
         bootcamp where we are 
         learning <br> html CSS
