--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!Doctype html>
 <html>
     <head>
-        <title>My first page</title>
+        <title>RESUME</title>
         <meta name="language" content="English">
         <meta name="keywords" content="my page,my website,first website">
         <meta name="description" content="this is my first webpage developed in coding bootcamp by packetprep">
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1>K.Tejas</h1>
+        Name:
+        K.Tejashwini
         <p >today is the first class of coding
         bootcamp where we are 
         learning <br> html CSS
