--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
          <h4 style="background: grey"><u>ACADEMIC PROFILE:</u></h4><br>
 
-        <table border="1">
+        <table style="width:100%" border="1">
         <tr>
             <th>course</th>
             <th>Name of school/college</th>
