--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <th>percentage /CGPA</th>
             <th>Year of passing</th>
         </tr>
-        <tr>
+        <tr><center>
             <td>B.tec</td>
             <td>Seyas institute of engineering and technology</td>
             <td>7.9</td>
-            <td>2020</td>
+            <td>2020</td></center>
         </tr>
         <tr>
             <td>Intermediate</td>
