--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <th>percentage /CGPA</th>
             <th>Year of passing</th>
         </tr>
-        <tr><center>
-            <td>B.tec</td>
-            <td>Seyas institute of engineering and technology</td>
-            <td>7.9</td>
-            <td>2020</td></center>
+        <tr>
+            <td><center>B.tec</center></td>
+            <td><center>Seyas institute of engineering and technology</center></td>
+            <td><center>7.9</center></td>
+            <td><center>2020</center></td>
         </tr>
         <tr>
             <td>Intermediate</td>
