--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <th>Year of passing</th>
         </tr>
         <tr>
-            <td><center>B.tec</center></td>
-            <td><center>Seyas institute of engineering and technology</center></td>
-            <td><center>7.9</center></td>
-            <td><center>2020</center></td>
+            <td>B.tec</td>
+            <td>Seyas institute of engineering and technology</td>
+            <td>7.9</td>
+            <td>2020</td>
         </tr>
         <tr>
             <td>Intermediate</td>
