--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <td>2020</td>
         </tr>
         <tr>
-            <td>Intermediate</td>
+            <td><center>Intermediate</center></td>
             <td>Sri Chaitanya Junior kalashala</td>
             <td>95%</td>
             <td>2016</td>
