--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
          <h4 style="background: grey"><u>ACADEMIC PROFILE:</u></h4><br>
 
-        <table style="width:100%" border="1">
+        <table style="width:100%" border="1" cellpadding="10">
         <tr>
             <th>course</th>
             <th>Name of school/college</th>
@@ -35,7 +35,7 @@
             <td>2020</td>
         </tr>
         <tr>
-            <td><center>Intermediate</center></td>
+            <td>Intermediate</td>
             <td>Sri Chaitanya Junior kalashala</td>
             <td>95%</td>
             <td>2016</td>
