--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <div>
+        <div id="box">
         <h4><b>K.Tejashwini Reddy</b></h4>
         H-no:6-74/4<br>balapur<br>Hyderabad<br>Telangana<br>
         Email:sfdhfjfyghjkkj@gmail.com<br>
