--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </ul>
         <hr>
             <h3>links</h3>
-            <a href="https://facebook.com">my facebook page</a>
+            <a href="https://facebook.com">facebook page</a>
         </div>
             
             
