--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id="box">
         <h4><b>K.Tejashwini Reddy</b></h4>
-        <img id="image" src="image.jpg"/><br><br>
+        <img align="right" id="image" src="image.jpg"/><br>
         H-no:6-74<br>balapur<br>Hyderabad<br>Telangana<br>
         Email:sfdhfjfyghjkkj@gmail.com<br>
         phno:7000000009<br>
